--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 .main {
-  background: url(./assets/shopping.jpg);
+  background: url(./assets/library-2507902_1280.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   min-height: calc(100vh - 60px);
