--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +8,7 @@ body {
   background: #f1f2b5;
   background: -webkit-linear-gradient(to right, #135058, #f1f2b5);
   background: linear-gradient(to right, #135058, #f1f2b5) ;
+ 
 }
 
 .main {
@@ -30,7 +32,7 @@ body {
 .nav-link {
   color: black !important;
   &:hover {
-    color: red !important;
+    color: white !important;
   }
 }
 .active {
